--- a/HTML-CSS-JS/index.html
+++ b/HTML-CSS-JS/index.html
@@ -3,52 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navigation Bar Variations</title>
-
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="nav-container">
-      <h2>Variation 1: Horizontal with underline effect</h2>
-      <nav class="nav1">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Products</a></li>
-          <li><button class="login-btn">Login</button></li>
-        </ul>
-      </nav>
-    </div>
-
-    <div class="nav-container">
-      <h2>Variation 2: Vertical with hover effect</h2>
-      <nav class="nav2">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Products</a></li>
-        </ul>
-        <button class="login-btn">Login</button>
-      </nav>
-    </div>
-
-    <div class="nav-container">
-      <h2>Variation 3: Horizontal with dropdown</h2>
-      <nav class="nav3">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li class="dropdown">
-            <a href="#">About</a>
-            <div class="dropdown-content">
-              <a href="#">Our Story</a>
-              <a href="#">Team</a>
-              <a href="#">Contact</a>
-            </div>
-          </li>
-          <li><a href="#">Products</a></li>
-          <li><button class="login-btn">Login</button></li>
-        </ul>
-      </nav>
-    </div>
+    <title>JS Demo</title>
+    <style>
+      body {
+        background-color: #1a1a1a;
+        color: #fff;
+      }
+    </style>
+   
+</head>
+<body>
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+    <script defer src="./script.js"></script>
   </body>
 </html>
